deploy_readiness/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-private
spec:
  type: LoadBalancer
  selector:
    app: nginx
    env: ready
  ports:
  - port: 3011
    protocol: TCP
    targetPort: 80
